--- a/public_html/index_.html
+++ b/public_html/index_.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <base href="http://localhost:8000/public_html/index_.html">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Digital police</title>
         <!-- BOOTSTRAP CSS (REQUIRED ALL PAGE)-->
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
         <!-- MAIN CSS (REQUIRED ALL PAGE)-->
-        <link href="/assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-        <link href="/assets/css/style.css" rel="stylesheet">
-        <link href="/assets/css/style-responsive.css" rel="stylesheet">
+        <link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="assets/css/style.css" rel="stylesheet">
+        <link href="assets/css/style-responsive.css" rel="stylesheet">
         <!-- leaflet -->
-        <link href="/plugins/leaflet/leaflet.css" rel="stylesheet">
+        <link href="plugins/leaflet/leaflet.css" rel="stylesheet">
         <!-- app -->
-        <link href="/css/main.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -35,7 +36,7 @@
                         <div class="btn-collapse-sidebar-left">
                             <i class="fa fa-bars"></i>
                         </div><!-- /.btn-collapse-sidebar-left -->
-                        <!-- End button sidebar left toggle -->                       
+                        <!-- End button sidebar left toggle -->
                         <!-- Begin button nav toggle -->
                         <div class="btn-collapse-nav" data-toggle="collapse" data-target="#main-fixed-nav">
                             <i class="fa fa-plus icon-plus"></i>
@@ -75,14 +76,14 @@
                     </li>
                     <li>
                         <a href="index.html"><i class="fa fa-link icon-sidebar"></i>Link3</a>
-                    </li>                    
+                    </li>
                 </ul>
             </div><!-- /.sidebar-left -->
             <!-- END SIDEBAR LEFT -->
             <!-- BEGIN PAGE CONTENT -->
             <div class="page-content">
                 <div class="map-wrapper">
-                    <div id="map"></div>                    
+                    <div id="map"></div>
                 </div>
             </div><!-- /.page-content -->
         </div><!-- /.wrapper -->
@@ -94,11 +95,11 @@
         <script src="assets/plugins/nicescroll/jquery.nicescroll.js"></script>
         <script src="assets/plugins/slimscroll/jquery.slimscroll.min.js"></script>
         <script src="assets/plugins/backstretch/jquery.backstretch.min.js"></script>
-        <!-- maps -->        
+        <!-- maps -->
         <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
-        <script src="/plugins/leaflet/leaflet.js"></script>
-        <script src="/js/leaflet-google.js"></script>
+        <script src="plugins/leaflet/leaflet.js"></script>
+        <script src="js/leaflet-google.js"></script>
         <!-- app -->
-        <script src="/js/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
