Added basic crime rendering on the map.

--- a/app/index.html
+++ b/app/index.html
@@ -104,10 +104,9 @@
 
   <script src="sentir-assets/js/apps.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+  <script src="controllers/map/map.js"></script>
+  <script src="controllers/view2/view2.js"></script>
+  <script src="services/crimes-service.js"></script>
+  <script src="config.js"></script>
 </body>
 </html>
