--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="sentir-assets/css/style.css" />
   <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css" />
+  <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
@@ -101,6 +102,7 @@
   <script src="bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
   <script src="bower_components/chosen/chosen.jquery.js"></script>
   <script src="bower_components/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
+  <script src='bower_components/angular-loading-bar/build/loading-bar.min.js'></script>
 
   <script src="sentir-assets/js/apps.js"></script>
   <script src="app.js"></script>
