Added category filtering.

--- a/app/index.html
+++ b/app/index.html
@@ -63,19 +63,8 @@
     </div><!-- /.top-navbar -->
     <!-- END TOP NAV -->
     <!-- BEGIN SIDEBAR LEFT -->
-    <div class="sidebar-left sidebar-nicescroller primary-color">
-        <ul class="sidebar-menu">
-            <li>
-                <a href="index.html"><i class="fa fa-link icon-sidebar"></i>Link1</a>
-            </li>
-            <li>
-                <a href="index.html"><i class="fa fa-link icon-sidebar"></i>Link2</a>
-            </li>
-            <li>
-                <a href="index.html"><i class="fa fa-link icon-sidebar"></i>Link3</a>
-            </li>
-        </ul>
-    </div><!-- /.sidebar-left -->
+    <sidebar></sidebar>
+    <!-- /.sidebar-left -->
     <!-- BEGIN PAGE CONTENT -->
     <div class="page-content">
       <div ng-view></div>
@@ -109,6 +98,8 @@
   <script src="controllers/map/map.js"></script>
   <script src="controllers/view2/view2.js"></script>
   <script src="services/crimes-service.js"></script>
+  <script src="services/categories-service.js"></script>
   <script src="config.js"></script>
+  <script src="directives/sidebar/sidebar.js"></script>
 </body>
 </html>
