Fix datetime refreshing events

--- a/app/directives/sidebar/sidebar.html
+++ b/app/directives/sidebar/sidebar.html
@@ -1,10 +1,10 @@
 <div class="sidebar-left sidebar-nicescroller primary-color">
     <ul>
         <li>
-            <label for="date-from>">From:</label>
-            <input type="date" ui-date ui-date-format="yyyy/MM/dd" id="date-from>" ng.model="dateFrom" value="{{ dateFrom | date:'yyyy-MM-dd' }}">
+            <label for="date-from">From:</label>
+            <input type="date" ui-date ui-date-format="dd/MM/yyyy" id="date-from" ng-model="dateFrom" ng-change="reloadCrimesData()">
             <label for="date-to">To:</label>
-            <input type="date" ui-date ui-date-format="yyyy/MM/dd" id="date-to" ng.model="dateTo" value="{{ dateTo | date:'yyyy-MM-dd' }}">
+            <input type="date" ui-date ui-date-format="dd/MM/yyyy" id="date-to" ng-model="dateTo" ng-change="reloadCrimesData()">
         </li>
     </ul>
     <ul ng-repeat="category in categories">
