--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,7 @@
   <script src="controllers/view2/view2.js"></script>
   <script src="services/crimes-service.js"></script>
   <script src="services/categories-service.js"></script>
+  <script src="services/regions-service.js"></script>
   <script src="config.js"></script>
   <script src="directives/sidebar/sidebar.js"></script>
 </body>
