--- a/app/directives/sidebar/sidebar.html
+++ b/app/directives/sidebar/sidebar.html
@@ -7,6 +7,14 @@
             <input type="date" ui-date ui-date-format="dd/MM/yyyy" id="date-to" ng-model="dateTo" ng-change="reloadCrimesData()">
         </li>
     </ul>
+    <span>Райони:</span>
+    <ul ng-repeat="region in regions">
+        <li>
+            <label>
+                <input type="checkbox" ng-model="region.selected"/>{{ region.region.name }}</label>
+        </li>
+    </ul>
+    <span>Категорії</span>
     <ul ng-repeat="category in categories">
       <li>
         <label>
