Fixed for API update

--- a/app/directives/sidebar/sidebar.html
+++ b/app/directives/sidebar/sidebar.html
@@ -11,7 +11,7 @@
     <ul ng-repeat="region in regions">
         <li>
             <label>
-                <input type="checkbox" ng-model="region.selected"/>{{ region.region.name }}</label>
+                <input type="checkbox" ng-model="region.selected"/>{{ region.name }}</label>
         </li>
     </ul>
     <span>Категорії</span>
