--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
     </div><!-- /.top-navbar -->
     <!-- END TOP NAV -->
     <!-- BEGIN SIDEBAR LEFT -->
+
     <sidebar></sidebar>
     <!-- /.sidebar-left -->
     <!-- BEGIN PAGE CONTENT -->
@@ -105,6 +106,7 @@
 <script src="services/crimes-service.js"></script>
 <script src="services/categories-service.js"></script>
 <script src="services/regions-service.js"></script>
+<script src="services/map-service.js"></script>
 <script src="config.js"></script>
 <script src="directives/sidebar/sidebar.js"></script>
 
