--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css"/>
     <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css'
           media='all'/>
+    <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
@@ -69,6 +70,7 @@
     </div><!-- /.top-navbar -->
     <!-- END TOP NAV -->
     <!-- BEGIN SIDEBAR LEFT -->
+
     <sidebar></sidebar>
     <!-- /.sidebar-left -->
     <!-- BEGIN PAGE CONTENT -->
@@ -102,11 +104,12 @@
 <script src="sentir-assets/js/apps.js"></script>
 <script src="app.js"></script>
 <script src="controllers/map/map.js"></script>
-<script src="controllers/view2/view2.js"></script>
 <script src="services/crimes-service.js"></script>
 <script src="services/categories-service.js"></script>
 <script src="services/regions-service.js"></script>
+<script src="services/map-service.js"></script>
 <script src="config.js"></script>
 <script src="directives/sidebar/sidebar.js"></script>
+
 </body>
 </html>
