--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,13 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/leaflet/dist/leaflet.js"></script>
+<!--MarkerCluster-->
+<script src="bower_components/leaflet.markercluster/src/MarkerCluster.js"></script>
+<script src="bower_components/leaflet.markercluster/src/MarkerClusterGroup.js"></script>
+<script src="bower_components/leaflet.markercluster/src/DistanceGrid.js"></script>
+<script src="bower_components/leaflet.markercluster/src/MarkerCluster.Spiderfier.js"></script>
+<script src="bower_components/leaflet.markercluster/src/MarkerCluster.QuickHull.js"></script>
+<!---->
 <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 <script src="bower_components/jquery.nicescroll/jquery.nicescroll.min.js"></script>
 <script src="bower_components/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
