Fix to #24 & add moveend-event

--- a/app/index.html
+++ b/app/index.html
@@ -93,11 +93,7 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/leaflet/dist/leaflet.js"></script>
 <!--MarkerCluster-->
-<script src="bower_components/leaflet.markercluster/src/MarkerCluster.js"></script>
-<script src="bower_components/leaflet.markercluster/src/MarkerClusterGroup.js"></script>
-<script src="bower_components/leaflet.markercluster/src/DistanceGrid.js"></script>
-<script src="bower_components/leaflet.markercluster/src/MarkerCluster.Spiderfier.js"></script>
-<script src="bower_components/leaflet.markercluster/src/MarkerCluster.QuickHull.js"></script>
+<script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
 <!---->
 <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 <script src="bower_components/jquery.nicescroll/jquery.nicescroll.min.js"></script>
